--- a/concurrent_tasks/Cargo.toml
+++ b/concurrent_tasks/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
+features = "0.10"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
+tracing-test = "0.2"
